--- a/_config.yml
+++ b/_config.yml
@@ -2,8 +2,8 @@ title: Anish Kulkarni
 email: ackulkar@usc.edu
 description: >-
   Portfolio website of Anish Kulkarni, a multidisciplinary engineer and product manager.
-baseurl: "" 
-url: "https://anikulkarn.github.io/portfolio"
+baseurl: "/portfolio"
+url: "https://anikulkarn.github.io"
 
 theme: minima
 
