--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,6 @@
 title: Anish Kulkarni
 email: ackulkar@usc.edu
-description: >-
-  Portfolio website of Anish Kulkarni, a multidisciplinary engineer and product manager.
+description: Portfolio website of Anish Kulkarni, a multidisciplinary engineer and product manager.
 baseurl: "/portfolio"
 url: "https://anikulkarn.github.io"
 
